[build-system]
requires = ["setuptools>=77.0.3", "setuptools-scm[toml]>=10.0", "vcs-versioning>=1.0.0", "wheel>=0.47.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.black]
target-version = ['py27']

exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )
)
'''
