[metadata]
name = rpmfile
author = Sean Ross-Ross
author_email = srossross@gmail.com
license = MIT
description = Read rpm archive files
url = https://github.com/srossross/rpmfile
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:

[options.extras_require]
zstd = zstandard>=0.13.0

[options.entry_points]
console_scripts =
    rpmfile = rpmfile.cli:console_script_entry_point
